--- a/Tutorial5.Rmd
+++ b/Tutorial5.Rmd
@@ -5,9 +5,7 @@ date: "2023-03-29"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
 
 # This is tutorial 5
 
+In this tutorial we are learning to use git rebase, to create a .gitignore file and to collaborate with others
