--- a/Tutorial5.Rmd
+++ b/Tutorial5.Rmd
@@ -1,11 +1,31 @@
 ---
-title: "Tutorial5"
+title: "Learning to rebase"
 author: "Harsh"
 date: "2023-03-29"
-output: html_document
+output: 
+  bookdown::html_document2
+keep_md: true
 ---
 
 
 # This is tutorial 5
 
 In this tutorial we are learning to use git rebase, to create a .gitignore file and to collaborate with others
+
+#  Libraries
+```{r}
+library(tidyverse)
+library(palmerpenguins)
+
+```
+
+
+# Examining the relationship between bill length and flipper length.
+
+```{r}
+library(palmerpenguins)
+data(package = 'palmerpenguins')
+ggplot(penguins, aes(x = bill_depth_mm , y = flipper_length_mm, color = species)) +
+geom_point()
+```
+
