--- a/Tutorial5.Rmd
+++ b/Tutorial5.Rmd
@@ -29,3 +29,15 @@ ggplot(penguins, aes(x = bill_depth_mm , y = flipper_length_mm, color = species)
 geom_point()
 
 ```
+
+# Investigating variability accross species
+
+```{r}
+ggplot(penguins, aes(x = species, y = bill_length_mm, fill=species)) +
+geom_boxplot(outlier.colour = "blue", outlier.size = 2) +
+geom_jitter(width=0.2, alpha = 0.5) + # 1 flower, 1 dot
+labs(title="Penguin Bill Length") +
+theme_light()
+
+```
+
